@@ -1,3 +1,10 @@
+2005-09-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* ldexp.c (fold_name <SIZEOF>): Return 0 for non-existent section.
+	(exp_fold_tree_1): Print assert message only in final stage of
+	linking.  Trigger assertion failure if expression cannot be
+	evaluated.
+
 2005-09-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/1263
